# SumMeet

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  package.json  pnpm-lock.yaml  tsconfig.base.json
#/Contents/: Info.plist
#/Contents/MacOS/: recorder
apps/api/: package.json
apps/api/prisma/: schema.prisma
apps/api/src/: context.ts  db.ts  env.ts  local-status.ts  paths.ts  pipeline.ts  queue.ts  server.ts  settings.ts  worker.ts
apps/api/src/cli/: diarize-check.ts  eval-engines.ts  extract.ts  test-extraction.ts  transcribe.ts
apps/api/src/routes/: meetings.ts  settings.ts
apps/desktop/: README.md  bundle-api.sh  bundle.sh  icons.py  setup-signing.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/extension/: README.md  background.js  content.css  content.js  manifest.json  offscreen.html  offscreen.js  permission.html  permission.js  popup.html  popup.js
apps/macos/recorder/: README.md  build.sh  recorder  recorder.swift
apps/macos/spike/: README.md  spike.swift
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/components/: CaptureMeters.tsx  ConfirmDialog.tsx  InsightSections.tsx  PromptDialog.tsx  RecordBar.tsx  SectionPicker.tsx  StatusBadge.tsx
apps/web/app/meetings/: page.tsx
apps/web/app/meetings/[id]/: page.tsx
apps/web/app/record-test/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/lib/: api.ts  i18n.tsx  native.ts  recorder.ts
(+10 files in other folders)
