[package]
name = "summeet-desktop"
version = "0.1.0"
edition = "2021"
description = "SumMeet desktop shell: the web panel in a native window, plus OS-level audio capture."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# A native window shell is not a hot loop; optimize for size and build time.
[profile.release]
opt-level = "s"
lto = true
strip = true
